[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-strength"
version = "0.1.0"
description = "Simple password strength tester"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["password", "security", "strength"]
authors = [ { name = "dwolf" } ]
dependencies = [
  "flask"
]

[project.scripts]
password-strength = "cli:main"

[project.urls]
Homepage = "https://github.com/BJaco2k19/password-strength"
Repository = "https://github.com/BJaco2k19/password-strength"
Issues = "https://github.com/BJaco2k19/password-strength/issues"
